Fix padding and font size on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,7 @@ ul {
 @media (max-width: 639px) {
   h1 {
     line-height: 1.25;
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
 
   h2 {
